MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -480,22 +480,37 @@ title: Math, Sonification, Plots
                         }
                 }
         </script>
+		<div class="container">
+
+                    {{ content }}
+
+		</div><!-- /.container -->
+                <br>
+
+                <h1>Math Plots</h1>
+		<nav><ul>
+                    <li><a href="/line" target="_self">LINES</a></li>
+        	    <li><a href="/circle" target="_self">CIRCLES</a></li>
+        	    <li><a href="/parabola" target="_self">PARABOLAS</a></li>
+		    <li><a href="/hyperbola" target="_self">HYPERBOLAS</a></li>
+		</ul></nav>
+		<br><br><br>
 		<footer>
                     <ul>
-                        <p>Comments.</p>
-                        <a href="https://youtu.be/x54uVowlfMU" target="_blank">
-                            <img class="center fit" src="https://robert-bobkoskie.github.io/cs6460/images/comments.png"
-                            title="Click on Image to Enter Comments"
-                            alt="https://youtu.be/x54uVowlfMU" style="border:0;">
-                        </a>
-                        <br><br><br>
+						<p>Comments.</p>
+							<a href="https://youtu.be/x54uVowlfMU" target="_blank">
+								<img class="center fit" src="https://robert-bobkoskie.github.io/cs6460/images/comments.png"
+								title="Click on Image to Enter Comments"
+								alt="https://youtu.be/x54uVowlfMU" style="border:0;">
+						</a>
+					<br><br><br>
 
-                        <p>If there are any additional feedback, enter in textbox and click "Send".</p>
-                   	<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
-                            <textarea name="body"></textarea>
-                            <input type="submit" value="Send" />
-                        </form>
-                        <li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
-                    </ul>
-                </footer>
+						<p>If there are any additional feedback, enter in textbox and click "Send".</p>
+					<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+						<textarea name="body"></textarea>
+						<input type="submit" value="Send" />
+					</form>
+					<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
+				</ul>
+		</footer>
 </body>
