MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -142,6 +142,7 @@ title: Math, Sonification, Plots
             // transform: scale(.5, .5);
             // display:inline-block;
             float:left;
+			overflow: visible;
             // border: 3px solid #73AD21;
         }
 
