--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -143,6 +143,7 @@ title: Math, Sonification, Plots
             // display:inline-block;
             float:left;
 			overflow: visible;
+			object-fit: contain;
             // border: 3px solid #73AD21;
         }
 
