MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -76,6 +76,8 @@ title: Math, Sonification, Plots
             // width: 74px;
             width: 74;
             height: 74px;
+			overflow: visible;
+			object-fit: contain;
 
             // transition: 100ms all ease;
             cursor: pointer;
