--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -76,8 +76,6 @@ title: Math, Sonification, Plots
             // width: 74px;
             width: 74;
             height: 74px;
-			overflow: visible;
-			object-fit: contain;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -118,7 +116,6 @@ title: Math, Sonification, Plots
         .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
-				object-fit: contain;
         }
         
         .center {
@@ -132,20 +129,18 @@ title: Math, Sonification, Plots
                 // width: 800px;
                 // height: 600px;
                 position: relative;
-				overflow: visible;
+				overflow: visible
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
                 // background-color: black;
         }
-		
+
         .floatButton {
             width: 220px;
             height: 100%;
             // transform: scale(.5, .5);
             // display:inline-block;
             float:left;
-			overflow: visible;
-			object-fit: contain;
             // border: 3px solid #73AD21;
         }
 
