--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -116,6 +116,7 @@ title: Math, Sonification, Plots
         .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
+				object-fit: contain;
         }
         
         .center {
@@ -129,7 +130,7 @@ title: Math, Sonification, Plots
                 // width: 800px;
                 // height: 600px;
                 position: relative;
-				overflow: visible
+				overflow: visible;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
                 // background-color: black;
