--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -52,8 +52,9 @@ title: Math, Sonification, Plots
         .volInc {
             background-color: #8A2BE2; /* BlueViolet background */
             color: white; /* White text */
-            width: 120;
-            height: 0;
+            // width: 120;
+            // height: 0;
+			display: inline-block
             // text-align: left;
             font-size: 18px;
             font-weight: bold;
@@ -74,8 +75,9 @@ title: Math, Sonification, Plots
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
-            width: 200;
-            height: 74px;
+            // width: 200;
+            // height: 74px;
+			display: inline-block
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -97,8 +99,9 @@ title: Math, Sonification, Plots
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
-            width: 200;
-            height: 74px;
+            // width: 200;
+            // height: 74px;
+			display: inline-block
 
             // transition: 100ms all ease;
             cursor: pointer;
