--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -52,9 +52,9 @@ title: Math, Sonification, Plots
         .volInc {
             background-color: #8A2BE2; /* BlueViolet background */
             color: white; /* White text */
-            // width: 120;
-            // height: 0;
-			display: inline-block
+            // display: inline-block
+			width: 140;
+            height: 0;
             // text-align: left;
             font-size: 18px;
             font-weight: bold;
@@ -74,10 +74,10 @@ title: Math, Sonification, Plots
             margin-right:16px;
             // background: transparent;
             box-sizing: border-box;
-            // width: 74px;
-            // width: 200;
-            // height: 74px;
-			display: inline-block
+            // display: inline-block
+			// width: 74px;
+            width: 200;
+            height: 74px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -98,10 +98,10 @@ title: Math, Sonification, Plots
             margin-right:16px;
             // background: transparent;
             box-sizing: border-box;
-            // width: 74px;
-            // width: 200;
-            // height: 74px;
-			display: inline-block
+            // display: inline-block
+			// width: 74px;
+            width: 200;
+            height: 74px;
 
             // transition: 100ms all ease;
             cursor: pointer;
