MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -52,8 +52,8 @@ title: Math, Sonification, Plots
         .volInc {
             background-color: #8A2BE2; /* BlueViolet background */
             color: white; /* White text */
-            display: inline-block
-			// width: 80;
+            // display: inline-block
+			width:  0;
             height: 0;
             // text-align: left;
             font-size: 18px;
