MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -164,7 +164,9 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 20px;
                 height: 20px;
-                position: absolute;
+                // position: absolute;
+				position: relative;
+				overflow: visible;
                 background-color: #555;
                 border-radius: 50%;
 
