--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -132,7 +132,7 @@ title: Math, Sonification, Plots
                 height: 100%;
                 // width: 800px;
                 // height: 600px;
-                position: relative;
+                // position: relative;
 				overflow: visible;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
@@ -166,7 +166,7 @@ title: Math, Sonification, Plots
                 height: 20px;
                 position: absolute;
 				// position: relative;
-				overflow: visible;
+				// overflow: visible;
                 background-color: #555;
                 border-radius: 50%;
 
