--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -119,7 +119,7 @@ title: Math, Sonification, Plots
         .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
-				object-fit: contain;
+				// object-fit: contain;
         }
         
         .center {
@@ -132,7 +132,7 @@ title: Math, Sonification, Plots
                 height: 100%;
                 // width: 800px;
                 // height: 600px;
-                // position: relative;
+                position: relative;
 				overflow: visible;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
