--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -119,7 +119,7 @@ title: Math, Sonification, Plots
         .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
-				// object-fit: contain;
+				object-fit: contain;
         }
         
         .center {
@@ -165,6 +165,7 @@ title: Math, Sonification, Plots
                 width: 20px;
                 height: 20px;
                 position: absolute;
+				object-fit: contain;
 				// position: relative;
 				// overflow: visible;
                 background-color: #555;
