MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -165,8 +165,14 @@ title: Math, Sonification, Plots
                 width: 20px;
                 height: 20px;
                 position: absolute;
-				object-fit: contain;
-				// position: relative;
+				
+				position: relative;
+				max-width: 100vh;
+				max-height: 100%;
+				margin: 0 auto;
+				// object-fit: contain;
+				overflow: hidden;
+				
 				// overflow: visible;
                 background-color: #555;
                 border-radius: 50%;
