MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -166,7 +166,7 @@ title: Math, Sonification, Plots
                 height: 20px;
                 position: absolute;
 				
-				position: relative;
+				// position: relative;
 				max-width: 100vh;
 				max-height: 100%;
 				margin: 0 auto;
