--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -169,7 +169,7 @@ title: Math, Sonification, Plots
 				// position: relative;
 				max-width: 100vh;
 				max-height: 100%;
-				margin: 100 auto;
+				margin: auto;
 				// object-fit: contain;
 				overflow: hidden;
 				
