MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -165,15 +165,17 @@ title: Math, Sonification, Plots
                 width: 20px;
                 height: 20px;
                 position: absolute;
-				
 				// position: relative;
 				max-width: 100vh;
 				max-height: 100%;
-				margin: auto;
-				// object-fit: contain;
+				// margin: auto;
+				// margin-top: 100px;
+				// margin-bottom: 100px;
+				margin-right: 10%;
+				margin-left: 10%;
 				overflow: hidden;
-				
 				// overflow: visible;
+				// object-fit: contain;
                 background-color: #555;
                 border-radius: 50%;
 
