--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -171,8 +171,8 @@ title: Math, Sonification, Plots
 				// margin: auto;
 				// margin-top: 100px;
 				// margin-bottom: 100px;
-				margin-right: auto;
-				margin-left: 20%;
+				margin-right: 10%;
+				margin-left: auto;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
