MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -172,7 +172,7 @@ title: Math, Sonification, Plots
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				margin-right: 20%;
-				// margin-left: auto;
+				margin-left: 5%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
