--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -171,7 +171,7 @@ title: Math, Sonification, Plots
 				// margin: auto;
 				// margin-top: 100px;
 				// margin-bottom: 100px;
-				margin-right: 20%;
+				margin-right: 100px;
 				margin-left: 5%;
 				overflow: hidden;
 				// overflow: visible;
