MODIFY CS6460: modify html files

--- a/cs6460/index.html
+++ b/cs6460/index.html
@@ -190,7 +190,7 @@ title: Math, Sonification, Plots
                 //      -o-animation: myOrbit 4s linear infinite; /* Opera 12+ */
                 //         animation: myOrbit 4s linear infinite; /* Chrome, Firefox 16+, 
                                                                    * IE 10+, Safari 5 */
-
+<div class="center fit myContainer">
                 -webkit-animation-play-state:paused;
                 -moz-animation-play-state:paused;
                 -o-animation-play-state:paused;
@@ -311,6 +311,7 @@ title: Math, Sonification, Plots
             95%  {transform:scale(3.5);}
             100% {rotate(170deg); left:29%; top:76%; rotate(-170deg); transform:scale(1.0);}
         }
+</div>
 
         /*
         // *********************************
