MODIFY ML DOCS PAGE

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -1,18 +1,17 @@
 ---
 layout: default
-title: Math, Sonification, Plots
+title: Machine Learning
 ---
 
 <head>
     <style>
-        <h1>About the Project</h1>
+        <h1>Maching Learning Papers</h1>
     </style>
 </head>
 
 <body>
-    <h1>About the Project</h1>
+    <h1>About the Papers</h1>
     <div><p>
-        This website is part of a human factors study to improve ergonomics for the visually impaired.
         The concept originates from a
         <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology"
         target="_blank">CS 6460: Educational Technology</a>
@@ -23,9 +22,6 @@ title: Math, Sonification, Plots
     </p></div>
     <br>
     <div><p>
-        I encourage visitors to peruse the Math Plots: LINES, CIRCLES, PARABOLAS, HYPERBOLAS, and play with the
-        High Contrast Settings and Sonification. Please provide comments and suggestions, and following your visit, kindly take the
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
-        target="_blank">survey</a>.
+        I'm interested in further discussing Machine Learning with others. I can be contacted: rbobkoskie3@gatech.edu.
     </p></div>
 </body>
