MODIFY ML DOCS PAGE

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -21,6 +21,25 @@ title: Machine Learning
         to gather information on the High Contrast Settings and Sonification implemented on the website.
     </p></div>
     <br>
+	<h1>ML Papers</h1>
+		<nav><ul>
+			<li><a href="/cs7646/docs/Demo_ML_SL_DT" target="_self">Presentation Decision Tree</a></li>
+			<li><a href="/cs7646/docs" target="_self">CIRCLES</a></li>
+			<li><a href="/cs7646/docs" target="_self">PARABOLAS</a></li>
+			<li><a href="/cs7646/docs" target="_self">HYPERBOLAS</a></li>
+		</ul></nav>
+		<br><br><br>
+
+		<footer>
+			<ul>
+				<p>If I'm interested in further discussing Machine Learning with others, enter in textbox and click "Send".</p>
+				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+					<textarea name="body"></textarea>
+					<input type="submit" value="Send" />
+				</form>
+				<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
+			</ul>
+		</footer>
     <div><p>
         I'm interested in further discussing Machine Learning with others. I can be contacted: rbobkoskie3@gatech.edu.
     </p></div>
