MODIFY ML DOCS PAGE

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+<! –– layout: default ––>
 title: Machine Learning
 ---
 
@@ -10,6 +10,9 @@ title: Machine Learning
 </head>
 
 <body>
+	<nav><ul>
+			<li><a href="/" target="_self">Home</a></li>	                	
+	</ul></nav>
     <h1>About the Papers</h1>
     <div><p>
         The concept originates from a
