MODIFY ML DOCS PAGE

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -11,7 +11,7 @@ title: Machine Learning
 
 <body>
 	<nav><ul>
-			<li><a href="/" target="_self">Home</a></li>	                	
+		<a href="/" target="_self">Home</a>	                	
 	</ul></nav>
     <h1>About the Papers</h1>
     <div><p>
@@ -26,10 +26,10 @@ title: Machine Learning
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
-			<li><a href="/cs7646/docs/Demo_ML_SL_DT" target="_self">Presentation Decision Tree</a></li>
-			<li><a href="/cs7646/docs" target="_self">CIRCLES</a></li>
-			<li><a href="/cs7646/docs" target="_self">PARABOLAS</a></li>
-			<li><a href="/cs7646/docs" target="_self">HYPERBOLAS</a></li>
+			<li><a href="/docs/Demo_ML_SL_DT" target="_self">Presentation Decision Tree</a></li>
+			<li><a href="/docs" target="_self">CIRCLES</a></li>
+			<li><a href="docs" target="_self">PARABOLAS</a></li>
+			<li><a href="/docs" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
