MODIFY ML DOCS PAGE

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -26,10 +26,10 @@ title: Machine Learning
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
-			<li><a href="/docs/Demo_ML_SL_DT" target="_self">Presentation Decision Tree</a></li>
-			<li><a href="/docs" target="_self">CIRCLES</a></li>
-			<li><a href="docs" target="_self">PARABOLAS</a></li>
-			<li><a href="/docs" target="_self">HYPERBOLAS</a></li>
+			<li><a href="docs/Demo_ML_SL_DT" target="_self">Presentation Decision Tree</a></li>
+			<li><a href="/docs/rbobkoskie3-analysisP1" target="_self">CIRCLES</a></li>
+			<li><a href="docs/rbobkoskie3-analysisP2" target="_self">PARABOLAS</a></li>
+			<li><a href="/docs/rbobkoskie3-analysisP3" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
@@ -40,10 +40,6 @@ title: Machine Learning
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
 				</form>
-				<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
 			</ul>
 		</footer>
-    <div><p>
-        I'm interested in further discussing Machine Learning with others. I can be contacted: rbobkoskie3@gatech.edu.
-    </p></div>
 </body>
