--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -26,8 +26,8 @@ title: Machine Learning
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
-			<li><a href="/docs/Demo_ML_SL_DT.pdf" target="_self">Presentation Decision Tree</a></li>
-			<li><a href="/docs/rbobkoskie3-analysisP1.pdf" target="_self">Supervised Learning</a></li>
+			<li><a href="docs/Demo_ML_SL_DT.pdf" target="_self">Presentation Decision Tree</a></li>
+			<li><a href="docs/rbobkoskie3-analysisP1.pdf" target="_self">Supervised Learning</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP2.pdf" target="_self">Randomized Optimization</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP3.pdf" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP4.pdf" target="_self">Markov Decision Processes</a></li>
