MODIFY ML DOCS PAGE

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -13,16 +13,12 @@ title: Machine Learning
 	<nav><ul>
 		<a href="/" target="_self">Home</a>	                	
 	</ul></nav>
-    <h1>About the Papers</h1>
+    <h1>About the Research</h1>
     <div><p>
-        The concept originates from a
-        <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology"
-        target="_blank">CS 6460: Educational Technology</a>
-        class project. In addition to this website, I have built a
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
-        target="_blank">survey</a>
-        to gather information on the High Contrast Settings and Sonification implemented on the website.
-    </p></div>
+        The work originates from a
+        <a href="https://omscs.gatech.edu/cs-7641-machine-learning"
+        target="_blank">CS 7641: Machine Learning</a>
+        class projects.
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
