--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -32,7 +32,7 @@ title: Machine Learning
 
 		<footer>
 			<ul>
-				<p>If I'm interested in further discussing Machine Learning with others, enter in textbox and click "Send".</p>
+				<p>If I'm interested in further discussing Machine Learning with others. Enter comments/questions in textbox and click "Send".</p>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
