MODIFY RESEARCH LINKS

--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -5,7 +5,7 @@ title: Machine Learning
 
 <head>
     <style>
-        <h1>Maching Learning Papers</h1>
+        <h1>Secure Computer Systems</h1>
     </style>
 </head>
 
@@ -15,24 +15,21 @@ title: Machine Learning
 	</ul></nav>
     <h1>About the Research</h1>
     <div><p>
-        The work originates from a
-        <a href="https://omscs.gatech.edu/cs-7641-machine-learning"
-        target="_blank">CS 7641: Machine Learning</a>
-        class projects.
+        The work originates from CS 6238: Secure Computer Systems class projects.
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
 			<li><a href="docs/Demo_ML_SL_DT.pdf" target="_self">Presentation Decision Tree</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP1.pdf" target="_self">Supervised Learning</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP2.pdf" target="_self">Randomized Optimization</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP3.pdf" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP4.pdf" target="_self">Markov Decision Processes</a></li>
+			<li><a href="docs/Client_Server_Security.pdf" target="_self">A discussion on Client Server Security</a></li>
+			<li><a href="docs/2-Factor_Auth.pdf" target="_self">2-Factor Authentication</a></li>
+			<li><a href="docs/Exploring_SetUID.pdf" target="_self">Exploring SetUID</a></li>
+			<li><a href="docs/Memory_Protection.pdf" target="_self">Memory Protection</a></li>
 		</ul></nav>
 		<br><br><br>
 
 		<footer>
 			<ul>
-				<p>If I'm interested in further discussing Machine Learning with others. Enter comments/questions in textbox and click "Send".</p>
+				<p>If I'm interested in further discussing Computer Security best practices with others. Enter comments/questions in textbox and click "Send".</p>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
