--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -15,7 +15,7 @@ title: Machine Learning
 	</ul></nav>
     <h1>About the Research</h1>
     <div><p>
-        The work originates from a
+        The work originates from
         <a href="https://omscs.gatech.edu/cs-7641-machine-learning"
         target="_blank">CS 7641: Machine Learning</a>
         class projects.
@@ -27,6 +27,7 @@ title: Machine Learning
 			<li><a href="docs/rbobkoskie3-analysisP2.pdf" target="_self">Randomized Optimization</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP3.pdf" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP4.pdf" target="_self">Markov Decision Processes</a></li>
+			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" target="_self">Artificial Intelligence through Computer Vision</a></li>
 		</ul></nav>
 		<br><br><br>
 
