MODIFY RESEARCH LINKS

--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -1,11 +1,11 @@
 ---
 <! –– layout: default ––>
-title: Secure Computer Systems
+title: Human-Computer Interaction
 ---
 
 <head>
     <style>
-        <h1>Secure Computer Systems</h1>
+        <h1>Human-Computer Interaction</h1>
     </style>
 </head>
 
@@ -15,14 +15,16 @@ title: Secure Computer Systems
 	</ul></nav>
     <h1>About the Research</h1>
     <div><p>
-        The work originates from CS6238: Secure Computer Systems class projects.
+		The work originates from
+        <a href="http://omscs6750.gatech.edu/"
+        target="_blank">CS6750: Human-Computer Interaction</a>
+        class projects.
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
-			<li><a href="docs/Client_Server_Security.pdf" target="_self">A discussion on Client Server Security</a></li>
-			<li><a href="docs/2-Factor_Auth.pdf" target="_self">2-Factor Authentication</a></li>
-			<li><a href="docs/Exploring_SetUID.pdf" target="_self">Exploring SetUID</a></li>
-			<li><a href="docs/Memory_Protection.pdf" target="_self">Memory Protection</a></li>
+			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/"target="_blank">Human-Computer Interaction (HCI)</a></li>
+			<li><a href="docs/ASSIGNMENT_M1-rbobkoskie3.pdf" target="_self">A Better User Interface for the Visually Impaired</a></li>
+			<li><a href="docs/Seven_Stages_of_Action.pdf" target="_self">Exploring the Seven Stages of Action</a></li>
 		</ul></nav>
 		<br><br><br>
 
