MODIFY RESEARCH LINKS

--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -15,9 +15,9 @@ title: Secure Computer Systems
 	</ul></nav>
     <h1>About the Research</h1>
     <div><p>
-        The work originates from CS6238: Secure Computer Systems class projects.
+        The work originates from CS6238: Secure Computer Systems (SCS) class projects.
     <br>
-	<h1>ML Papers</h1>
+	<h1>SCS Papers</h1>
 		<nav><ul>
 			<li><a href="docs/Client_Server_Security.pdf" target="_self">A discussion on Client Server Security</a></li>
 			<li><a href="docs/2-Factor_Auth.pdf" target="_self">2-Factor Authentication</a></li>
