--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -17,10 +17,10 @@ title: Human-Computer Interaction
     <div><p>
 		The work originates from
         <a href="http://omscs6750.gatech.edu/"
-        target="_blank">CS6750: Human-Computer Interaction</a>
+        target="_blank">CS6750: Human-Computer Interaction (HCI)</a>
         class projects.
     <br>
-	<h1>ML Papers</h1>
+	<h1>HCI Papers</h1>
 		<nav><ul>
 			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/"target="_blank">Human-Computer Interaction (HCI)</a></li>
 			<li><a href="docs/ASSIGNMENT_M1-rbobkoskie3.pdf" target="_self">A Better User Interface for the Visually Impaired</a></li>
