--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -22,10 +22,11 @@ title: Human-Computer Interaction
     <br>
 	<h1>HCI Papers</h1>
 		<nav><ul>
-			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/"target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
+			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" target="_self">Assistive Technology for the Visually Impaired</a></li>
 			<li><a href="docs/ASSIGNMENT_M1-rbobkoskie3.pdf" target="_self">A Better User Interface for the Visually Impaired</a></li>
 			<li><a href="docs/Seven_Stages_of_Action.pdf" target="_self">Exploring the Seven Stages of Action</a></li>
+			<li><a class="dropdown-item" href="/MICROWAVE_PROTOTYPE" target="_blank">Human-Computer Interaction (HCI) UNDER DEVELOPMENT Microwave Interface Prototype</a></li>
 		</ul></nav>
 		<br><br><br>
 
