--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -353,7 +353,7 @@ title: Math, Sonification, Plots
     <div><p>
         The results from the survey will advance research for developing better technologies that improve 
         accessibility to digital media by the visually impaired. This project will culminate with a 
-        <a href="docs/ASSIGNMENT_M2-rbobkoskie3.pdf"
+        <a href="../docs/ASSIGNMENT_M2-rbobkoskie3.pdf"
         target="_blank">paper</a>
         commensurable for publication.
     </p></div>
