--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -24,8 +24,10 @@ title: Human-Computer Interaction
 		<nav><ul>
 			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" target="_self">Assistive Technology for the Visually Impaired</a></li>
-			<li><a href="docs/ASSIGNMENT_M1-rbobkoskie3.pdf" target="_self">A Better User Interface for the Visually Impaired</a></li>
-			<li><a href="docs/Seven_Stages_of_Action.pdf" target="_self">Exploring the Seven Stages of Action</a></li>
+			<li><a href="docs/ASSIGNMENT_M2-rbobkoskie3.pdf" target="_self">A Better User Interface for the Visually Impaired</a></li>
+			<li><a href="docs/ASSIGNMENT_P3-rbobkoskie3.pdf" target="_self">Design Principles, Heuristics, Representation and Learning Curves</a></li>
+			<li><a href="docs/ASSIGNMENT_P1-rbobkoskie3.pdf" target="_self">Exploring the Seven Stages of Action</a></li>
+			<li><a href="docs/ASSIGNMENT_P2-rbobkoskie3.pdf" target="_self">Consider Cognitive Load to Improve Interface Design</a></li>
 			<li><a class="dropdown-item" href="MICROWAVE_PROTOTYPE" target="_blank">Human-Computer Interaction (HCI) UNDER DEVELOPMENT Microwave Interface Prototype</a></li>
 		</ul></nav>
 		<br><br><br>
