--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -4,6 +4,12 @@ title: Math, Sonification, Plots
 ---
 
 <head>
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
+	<title>UNDER CONSTRUCTION</title>
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<br><br>
+	
     <style>
         .btn-group button {
                 background-color: #4CAF50; /* Green background */
