--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -4,10 +4,10 @@ title: Math, Sonification, Plots
 ---
 
 <head>
-	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="../images\gtech.png">
 	<title>UNDER CONSTRUCTION</title>
 	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<br><br>
 	
     <style>
