--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -5,7 +5,7 @@ title: Math, Sonification, Plots
 
 <head>
 	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="../images\gtech.png">
-	<title>UNDER CONSTRUCTION</title>
+	<title>CS 6750: Human-Computer Interaction</title>
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<br><br>
@@ -352,8 +352,8 @@ title: Math, Sonification, Plots
     <div><p>
         This website is part of a human factors study to improve ergonomics for the visually impaired.
         The concept originates from a
-        <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology"
-        target="_blank">CS 6460: Educational Technology</a>
+        <a href="https://omscs.gatech.edu/cs-6750-human-computer-interaction"
+        target="_blank">CS 6750: Human-Computer Interaction</a>
     </p></div>
     <br>
     <div><p>
