--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -382,12 +382,12 @@ title: Math, Sonification, Plots
         This website is part of a human factors study to improve ergonomics for the visually impaired.
         The concept originates from a
         <a href="https://omscs.gatech.edu/cs-6750-human-computer-interaction"
-        target="_blank">CS 6750: Human-Computer Interaction</a>
+        target="_blank">CS 6750: Human-Computer Interaction</a> research project.
     </p></div>
     <br>
     <div><p>
-        The results from the survey will advance research for developing better technologies that improve 
-        accessibility to digital media by the visually impaired. This project will culminate with a 
+        The results from this project will advance research for developing better technologies that improve 
+        accessibility and user experience for the visually impaired. This project will culminate with a 
         <a href="../docs/ASSIGNMENT_M2-rbobkoskie3.pdf"
         target="_blank">paper</a>
         commensurable for publication.
